# datareftool

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  build_vc12.bat  build_vc14.bat
src/: CMakeLists.txt
src/lib/scan/: scan_files.cpp
src/plugin/: logging.h
